# ICSimulation

./: README.md  pyproject.toml
ICSimulation/: ICSimulation.py  kernel.pyx
examples/: exampleAnalyticalModel.py  exampleCIC.py  exampleCIC2.py  exampleMultiplication.py  examplePPIC.py  examplePPIC2.py  exampleSIC.py
