[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "cython >= 3.1", "numpy>2.3"]

[project]
name         = "ICSimulation"
version      = "2.1.0"
authors      = [{name  = "José Paz-Martín", email = "jose.martin@usc.gal"}]
description  = "Code for simulating parallel-plate, cylindrical and spherical ionization chambers"
readme       = "README.md"
dependencies = ["numpy >= 2.3"]
keywords     = ["recombination", "ionization chambers"]

[tool.setuptools]
packages     = ["ICSimulation"]
ext-modules  = [{name = "kernel", sources = ["ICSimulation/kernel.pyx"],include-dirs = ["numpy"]}]

[tool.cythonize]
language_level    = "3"
boundscheck       = "False"
cdivision         = "True"
overflowcheck     = "False"
initializedcheck  = "False" 
wraparound        = "False"

[tool.setuptools.package-data]
'ICSimulation' = ["data/*"]

[project.urls]
Homepage = "https://github.com/JPazMartin/ICSimulation.git"
